--- a/app/views/books/_userinfo.html.erb
+++ b/app/views/books/_userinfo.html.erb
@@ -20,18 +20,16 @@
   </nav>
 </header>
 
+<!--フラッシュメッセージ-->
+ <%= render 'layouts/notifications' %>
 
-
-  <p id="notice"></p>
-<div class='container'>
-  <div class='row'>
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-    <h1>Editing Book</h1>
-    
-      <!--エラー-->
+<div class='container px-5 px-sm-0'>
+  
+  
+  <!--エラー-->
 <% if @book.errors.any? %>
   <div class="errormes">
-    <h3><%= @book.errors.count %>error prohibited this obj from being saved:</h3>
+    <h3><%= @book.errors.count %> errors prohibited this obj from being saved:</h3>
     <ul>
       <% @book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -39,10 +37,46 @@
     </ul>
   </div>
 　<% end %>
-    
-    
-    <%= form_with model: @book, local:true do |f| %>
+
+  
+<!--user onfo-->
+  <div class='row'>
+    <div class='col-md-3'>
       
+      <h2>User info</h2>
+      <table class='table'>
+        
+        
+  <tr><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></tr>
+
+  
+  
+  <tr>
+    <th>name</th>
+    <th class="profile-name">
+      <%= current_user.name %>
+    </th>
+  </tr>
+ <tr>
+	  <th>introduction</th>
+	  <th><%= current_user.introduction %></th>
+  </tr>
+</table>
+  
+  
+  <!--プロフィール編集ページ     -->
+  <div class='row'>
+    <%= link_to edit_user_path(current_user.id), class:"btn btn-outline-secondary btn-block" do %>
+    <i class="fas fa-user-cog"></i>
+    <% end %>
+  </div>
+  
+  
+  <!--新規投稿フォーム        -->
+   <h2 class="mt-3">New book</h2>
+   
+   <%= form_with model: @book, local:true do |f| %>
+  
   <div class="form-group">
     <label for="book_title">Title</label>
     <%= f.text_field :title, class: "form-control book_title" %>
@@ -52,25 +86,10 @@
     <label for="book_opinion">Opinion</label>
     <%= f.text_area :body, class: "form-control book_body" %>
   </div>
-      <div class="form-group">
-        <%= f.submit 'Update Book', class:"btn btn-success" %>
-    <% end %>
-      </div>
-      <p>
-        <%= link_to "Show", book_path %>
-        |
-        <%= link_to "Back", books_path %>
-      </p>
+  
+  <div class="form-group">
+    <%= f.submit 'Create Book', class:"btn btn-success" %>
   </div>
-</div>
-
-      </main>
-    <footer>
-  <div class='container mt-5'>
-  	<div class='row'>
-    	<div class='mx-auto'>
-    		<p>CopyRight Infratop.inc</p>
-    	</div>
-    </div>
   </div>
-</footer>
+  
+  <% end %> 
