--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -11,8 +11,8 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <li><%= link_to '  Home', "/", class: "fas fa-home nav-link text-light" %></li>
-          <li><%= link_to '  About', "/home/about", class: "fas fa-link nav-link text-light" %></li>
-          <li><%= link_to '  ign up', "/users/sign_up", class: "fas fa-user-plus nav-link text-light" %></li>
+          <li><%= link_to '  About', "/homes/about", class: "fas fa-link nav-link text-light" %></li>
+          <li><%= link_to '  sign up', "/users/sign_up", class: "fas fa-user-plus nav-link text-light" %></li>
           <li><%= link_to '  login', "/users/sign_in", class: "fas fa-sign-in-alt nav-link text-light" %></li>
         </ul>
       </div>
