--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -11,8 +11,8 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <li><%= link_to '  Home', "/", class: "fas fa-home nav-link text-light" %></li>
-          <li><%= link_to '  About', "/home/about", class: "fas fa-link nav-link text-light" %></li>
-          <li><%= link_to '  ign up', "/users/sign_up", class: "fas fa-user-plus nav-link text-light" %></li>
+          <li><%= link_to '  About', "/homes/about", class: "fas fa-link nav-link text-light" %></li>
+          <li><%= link_to '  sign up', "/users/sign_up", class: "fas fa-user-plus nav-link text-light" %></li>
           <li><%= link_to '  login', "/users/sign_in", class: "fas fa-sign-in-alt nav-link text-light" %></li>
         </ul>
       </div>
@@ -20,7 +20,7 @@
   </nav>
 </header>
 <main>
-        <p id="notice"></p>
+        <%= render 'layouts/notifications' %>
         <div class="container">
   <div class="row">
     <div class='mx-auto col-11 col-sm-10 col-lg-8 col-xl-6'>
@@ -30,10 +30,11 @@
       <p> about various books!</p>
       <div class="btn-wrapper col-10 mx-auto">
         <div class="row">
-          <a class="btn btn-info btn-sm btn-block mb-3 sign_in" href="/users/sign_in">Log in</a>
+          <%= link_to '  Log in', "/users/sign_in", class: "btn btn-info btn-sm btn-block mb-3 sign_in" %>
         </div>
         <div class="row">
-          <a class="btn btn-success btn-sm btn-block sign_up" href="/users/sign_up">Sign Up</a>
+          <%= link_to '  Sign Up', "/users/sign_up", class: "btn btn-success btn-sm btn-block sign_up" %>
+          <!--<a class="btn btn-success btn-sm btn-block sign_up" href="/users/sign_up">Sign Up</a>-->
         </div>
       </div>
     </div>
