--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -22,45 +22,43 @@
 
 
 
+  <main>
   <p id="notice"></p>
 <div class='container'>
   <div class='row'>
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-    <h1>Editing Book</h1>
+    <h2>User info</h2>
     
-      <!--エラー-->
-<% if @book.errors.any? %>
-  <div class="errormes">
-    <h3><%= @book.errors.count %>error prohibited this obj from being saved:</h3>
-    <ul>
-      <% @book.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
+  <% if @user.errors.any? %>
+    <div class="errormes">
+        <h3><%= @user.errors.count %> error prohibited this obj from being saved:</h3>
+      <ul>
+        <% @user.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
 　<% end %>
     
     
-    <%= form_with model: @book, local:true do |f| %>
+    <%= form_with model: @user, local:true do |f| %>
       
-  <div class="form-group">
-    <label for="book_title">Title</label>
-    <%= f.text_field :title, class: "form-control book_title" %>
-  </div>
-  
-  <div class="form-group">
-    <label for="book_opinion">Opinion</label>
-    <%= f.text_area :body, class: "form-control book_body" %>
-  </div>
       <div class="form-group">
-        <%= f.submit 'Update Book', class:"btn btn-success" %>
+        <label for="user_name">Name</label>
+        <%= f.text_field :name, class: "form-control name" %>
+      </div>
+     <div class="form-group">
+        <label for="user_image">Image</label>
+        <%= f.attachment_field :profile_image, class: "w-100" %>
+      </div>
+      <div class="form-group">
+        <label for="user_introduction">Introduction</label>
+        <%= f.text_area :introduction, class: "form-control introduction" %>
+      </div>
+      <div class="form-group">
+        <%= f.submit 'Update User', class:"btn btn-secondary" %>
     <% end %>
       </div>
-      <p>
-        <%= link_to "Show", book_path %>
-        |
-        <%= link_to "Back", books_path %>
-      </p>
   </div>
 </div>
 
