--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,49 +22,45 @@
 
 
 
-  <p id="notice"></p>
-<div class='container'>
-  <div class='row'>
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-    <h1>Editing Book</h1>
-    
-      <!--エラー-->
-<% if @book.errors.any? %>
-  <div class="errormes">
-    <h3><%= @book.errors.count %>error prohibited this obj from being saved:</h3>
-    <ul>
-      <% @book.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
-　<% end %>
+<%= render 'books/userinfo', books: @books %>
+
+
+
+
     
     
-    <%= form_with model: @book, local:true do |f| %>
-      
-  <div class="form-group">
-    <label for="book_title">Title</label>
-    <%= f.text_field :title, class: "form-control book_title" %>
-  </div>
-  
-  <div class="form-group">
-    <label for="book_opinion">Opinion</label>
-    <%= f.text_area :body, class: "form-control book_body" %>
-  </div>
-      <div class="form-group">
-        <%= f.submit 'Update Book', class:"btn btn-success" %>
-    <% end %>
-      </div>
-      <p>
-        <%= link_to "Show", book_path %>
-        |
-        <%= link_to "Back", books_path %>
-      </p>
+    <div class='col-md-8 offset-md-1'>
+      <h2>Users</h2>
+      <table class='table table-hover table-inverse'>
+  <thead>
+    <tr>
+      <th></th>
+      <th>image</th>
+      <th>name</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @books.each do |book| %>
+      <tr>
+        <td>
+          <%= attachment_image_tag book.user, :profile_image, size: "40x40", fallback: "no_image.jpg" %>
+        </td>
+        <td>
+          <%= current_user.name %>
+        </td>
+        <td><%= link_to "Show", user_path(current_user.id) %></td>
+      </tr>
+    <% end %> 
+  </tbody>
+</table>
+    </div>
   </div>
 </div>
 
-      </main>
+
+
+
     <footer>
   <div class='container mt-5'>
   	<div class='row'>
