--- a/app/views/books/_userinfo.html.erb
+++ b/app/views/books/_userinfo.html.erb
@@ -12,7 +12,7 @@
         <ul class="navbar-nav ml-auto">
           <li><%= link_to '  Home', user_path(current_user.id), class: "fas fa-home nav-link text-light" %></li>
           <li><%= link_to '  Users', users_path, class: "fas fa-users nav-link text-light" %></li>
-          <li><%= link_to '  Books', "/books", class: "fas fa-book-open nav-link text-light" %></li>
+          <li><%= link_to '  Books', books_path, class: "fas fa-book-open nav-link text-light" %></li>
           <li><%= link_to '  logout', destroy_user_session_path, method: :delete, class: "fas fa-sign-out-alt nav-link text-light" %></li>
         </ul>
       </div>
@@ -23,9 +23,9 @@
 <!--フラッシュメッセージ-->
  <%= render 'layouts/notifications' %>
 
-<div class='container px-5 px-sm-0'>
-  
-  
+<div class='container'>
+
+
   <!--エラー-->
 <% if @book.errors.any? %>
   <div class="errormes">
@@ -38,58 +38,58 @@
   </div>
 　<% end %>
 
-  
+
 <!--user onfo-->
   <div class='row'>
     <div class='col-md-3'>
-      
+
       <h2>User info</h2>
       <table class='table'>
-        
-        
+
+
   <tr><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></tr>
 
-  
-  
+
+
   <tr>
     <th>name</th>
     <th class="profile-name">
-      <%= current_user.name %>
+      <%= @user.name %>
     </th>
   </tr>
  <tr>
 	  <th>introduction</th>
-	  <th><%= current_user.introduction %></th>
+	  <th><%= @user.introduction %></th>
   </tr>
 </table>
-  
-  
+
+
   <!--プロフィール編集ページ     -->
   <div class='row'>
     <%= link_to edit_user_path(current_user.id), class:"btn btn-outline-secondary btn-block" do %>
     <i class="fas fa-user-cog"></i>
     <% end %>
   </div>
-  
-  
+
+
   <!--新規投稿フォーム        -->
    <h2 class="mt-3">New book</h2>
-   
-   <%= form_with model: @book, local:true do |f| %>
-  
+
+   <%= form_with model:@book, local:true do |f| %>
+
   <div class="form-group">
     <label for="book_title">Title</label>
     <%= f.text_field :title, class: "form-control book_title" %>
   </div>
-  
+
   <div class="form-group">
     <label for="book_opinion">Opinion</label>
     <%= f.text_area :body, class: "form-control book_body" %>
   </div>
-  
+
   <div class="form-group">
     <%= f.submit 'Create Book', class:"btn btn-success" %>
   </div>
-  </div>
-  
-  <% end %> 
+</div>
+
+  <% end %>
