--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,25 +1,25 @@
-
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-  <span><%= link_to 'Bookers', "/", class: "navbar-brand" %></span>
+  <span><%= link_to 'Bookers', root_path, class: "navbar-brand" %></span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
-          <li><%= link_to '  Home', "/", class: "fas fa-home nav-link text-light" %></li>
-          <li><%= link_to '  About', "/homes/about", class: "fas fa-link nav-link text-light" %></li>
-          <li><%= link_to '  sign up', "/users/sign_up", class: "fas fa-user-plus nav-link text-light" %></li>
-          <li><%= link_to '  login', "/users/sign_in", class: "fas fa-sign-in-alt nav-link text-light" %></li>
+          <li><%= link_to '  Home', root_path, class: "fas fa-home nav-link text-light" %></li>
+          <li><%= link_to '  About', home_about_path, class: "fas fa-link nav-link text-light" %></li>
+          <li><%= link_to '  sign up', new_user_registration_path, class: "fas fa-user-plus nav-link text-light" %></li>
+          <li><%= link_to '  login', new_user_session_path, class: "fas fa-sign-in-alt nav-link text-light" %></li>
         </ul>
       </div>
     </div>
   </nav>
 </header>
-<main>
+
+
         <p id="notice"></p>
         <div class="container">
   <div class="row">
