--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,25 +1,25 @@
-
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-  <span><%= link_to 'Bookers', "/", class: "navbar-brand" %></span>
+  <span><%= link_to 'Bookers', root_path, class: "navbar-brand" %></span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
-          <li><%= link_to '  Home', "/", class: "fas fa-home nav-link text-light" %></li>
-          <li><%= link_to '  About', "/homes/about", class: "fas fa-link nav-link text-light" %></li>
-          <li><%= link_to '  sign up', "/users/sign_up", class: "fas fa-user-plus nav-link text-light" %></li>
-          <li><%= link_to '  login', "/users/sign_in", class: "fas fa-sign-in-alt nav-link text-light" %></li>
+          <li><%= link_to '  Home', root_path, class: "fas fa-home nav-link text-light" %></li>
+          <li><%= link_to '  About', home_about_path, class: "fas fa-link nav-link text-light" %></li>
+          <li><%= link_to '  sign up', new_user_registration_path, class: "fas fa-user-plus nav-link text-light" %></li>
+          <li><%= link_to '  login', new_user_session_path, class: "fas fa-sign-in-alt nav-link text-light" %></li>
         </ul>
       </div>
     </div>
   </nav>
 </header>
-<main>
+  
+  
         <%= render 'layouts/notifications' %>
         <div class="container">
   <div class="row">
@@ -30,11 +30,10 @@
       <p> about various books!</p>
       <div class="btn-wrapper col-10 mx-auto">
         <div class="row">
-          <%= link_to '  Log in', "/users/sign_in", class: "btn btn-info btn-sm btn-block mb-3 sign_in" %>
+          <%= link_to 'Log in', "/users/sign_in", class: "btn btn-info btn-sm btn-block mb-3 sign_in" %>
         </div>
         <div class="row">
-          <%= link_to '  Sign Up', "/users/sign_up", class: "btn btn-success btn-sm btn-block sign_up" %>
-          <!--<a class="btn btn-success btn-sm btn-block sign_up" href="/users/sign_up">Sign Up</a>-->
+          <%= link_to 'Sign Up', "/users/sign_up", class: "btn btn-success btn-sm btn-block sign_up" %>
         </div>
       </div>
     </div>
