--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,8 +21,9 @@
       
     <% @books.each do |book| %>
       <tr>
+          <% if @user.id == book.user.id %>
         <td>
-          <%= link_to user_path(current_user.id) do %>
+          <%= link_to user_path(book.user.id) do %>
           <%= attachment_image_tag book.user, :profile_image, size: "40x40", fallback: "no_image.jpg" %>
           <% end %>
         </td>
@@ -32,6 +33,7 @@
           <% end %>
         </td>
         <td><%= book.body %></td>
+        <% end %>
       </tr>
     <% end %> 
   </tbody>
