--- a/app/views/books/_userinfo.html.erb
+++ b/app/views/books/_userinfo.html.erb
@@ -1,25 +1,3 @@
-
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-
-<header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-  <span><%= link_to 'Bookers', "/", class: "navbar-brand" %></span>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ml-auto">
-          <li><%= link_to '  Home', user_path(current_user.id), class: "fas fa-home nav-link text-light" %></li>
-          <li><%= link_to '  Users', users_path, class: "fas fa-users nav-link text-light" %></li>
-          <li><%= link_to '  Books', books_path, class: "fas fa-book-open nav-link text-light" %></li>
-          <li><%= link_to '  logout', destroy_user_session_path, method: :delete, class: "fas fa-sign-out-alt nav-link text-light" %></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
-
 <!--フラッシュメッセージ-->
  <%= render 'layouts/notifications' %>
 
@@ -27,11 +5,11 @@
 
 
   <!--エラー-->
-<% if @book.errors.any? %>
+<% if book.errors.any? %>
   <div class="errormes">
-    <h3><%= @book.errors.count %> errors prohibited this obj from being saved:</h3>
+    <h3><%= book.errors.count %> errors prohibited this obj from being saved:</h3>
     <ul>
-      <% @book.errors.full_messages.each do |message| %>
+      <% book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
     </ul>
@@ -47,35 +25,33 @@
       <table class='table'>
 
 
-  <tr><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></tr>
+  <tr><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></tr>
 
 
 
   <tr>
     <th>name</th>
     <th class="profile-name">
-      <%= @user.name %>
+      <%= user.name %>
     </th>
   </tr>
  <tr>
 	  <th>introduction</th>
-	  <th><%= @user.introduction %></th>
+	  <th><%= user.introduction %></th>
   </tr>
 </table>
 
 
   <!--プロフィール編集ページ     -->
   <div class='row'>
-    <%= link_to edit_user_path(current_user.id), class:"btn btn-outline-secondary btn-block" do %>
-    <i class="fas fa-user-cog"></i>
-    <% end %>
+    <%= link_to "", edit_user_path(user.id), class:"btn btn-outline-secondary btn-block fas fa-user-cog"  %>
   </div>
 
 
   <!--新規投稿フォーム        -->
    <h2 class="mt-3">New book</h2>
 
-   <%= form_with model:@book, local:true do |f| %>
+   <%= form_with model:book, local:true do |f| %>
 
   <div class="form-group">
     <label for="book_title">Title</label>
