--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,31 @@
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+  <span><%= link_to 'Bookers', "/", class: "navbar-brand" %></span>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto">
+          <li><%= link_to '  Home', user_path(current_user.id), class: "fas fa-home nav-link text-light" %></li>
+          <li><%= link_to '  Users', users_path, class: "fas fa-users nav-link text-light" %></li>
+          <li><%= link_to '  Books', books_path, class: "fas fa-book-open nav-link text-light" %></li>
+          <li><%= link_to '  logout', destroy_user_session_path, method: :delete, class: "fas fa-sign-out-alt nav-link text-light" %></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
+
+
 
 <!--共通テンプレート(userinfo)-->
-<%= render 'books/userinfo', books: @books %>
- 
-  
-  
-    
+<%= render 'books/userinfo', book: @book_new, user: @user %>
+
+
+
+
     <!--投稿データ-->
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
@@ -18,7 +39,7 @@
     </tr>
   </thead>
   <tbody>
-      
+
     <% @books.each do |book| %>
       <tr>
         <td>
@@ -33,7 +54,7 @@
         </td>
         <td><%= book.body %></td>
       </tr>
-    <% end %> 
+    <% end %>
   </tbody>
 </table>
     </div>
@@ -51,3 +72,4 @@
     </div>
   </div>
 </footer>
+
