--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,39 +1,59 @@
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+  <span><%= link_to 'Bookers', "/", class: "navbar-brand" %></span>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto">
+          <li><%= link_to '  Home', user_path(current_user.id), class: "fas fa-home nav-link text-light" %></li>
+          <li><%= link_to '  Users', users_path, class: "fas fa-users nav-link text-light" %></li>
+          <li><%= link_to '  Books', books_path, class: "fas fa-book-open nav-link text-light" %></li>
+          <li><%= link_to '  logout', destroy_user_session_path, method: :delete, class: "fas fa-sign-out-alt nav-link text-light" %></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
+
 
 <!--共通テンプレート(userinfo)-->
-<%= render 'books/userinfo', users: @users %>
+<%= render 'books/userinfo', book: @book_new, user: @user %>
 
 
-  
+
   <!--投稿データ-->
     <div class='col-md-8 offset-md-1'>
       <h2>Book detail</h2>
       <table class='table'>
-  
-     <% @books.each do |book| %>
-      <tr>
-          <% if @user.id == book.user.id %>
+
+       <tr>
         <td>
-          <%= link_to user_path(book.user.id) do %>
-          <%= attachment_image_tag book.user, :profile_image, size: "40x40", fallback: "no_image.jpg" %>
-          <br><%= book.user.name %></br>
+          <%= link_to user_path(@book.user.id) do %>
+          <%= attachment_image_tag @book.user, :profile_image, size: "40x40", fallback: "no_image.jpg" %>
+          <br><%= @book.user.name %></br>
           <% end %>
         </td>
         <td>
-          <%= link_to book_path(book.id) do %>
-          <%= book.title %>
+          <%= link_to book_path(@book.id) do %>
+          <%= @book.title %>
           <% end %>
         </td>
-        <td><%= book.body %></td>
+        <td><%= @book.body %></td>
         <td>
-          <%= link_to "Edit", edit_book_path(book.id), class: "btn btn-sm btn-success edit" %>
-        </td>
-        <td>
-          <%= link_to "Destroy", destroy_book_path(book.id), method: :delete, class: "btn btn-sm btn-danger destroy", "data-confirm" => "本当に消しますか？"  %>
-        </td>
+          <% if @book.user == current_user %>
+          <%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-sm btn-success edit" %>
           <% end %>
+        </td>
+        <td>
+          <% if @book.user == current_user %>
+          <%= link_to "Destroy", destroy_book_path(@book.id), method: :delete, class: "btn btn-sm btn-danger destroy", "data-confirm" => "本当に消しますか？"  %>
+          <% end %>
+        </td>
       </tr>
-    <% end %> 
-    
+
 </table>
     </div>
   </div>
