--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,25 @@
-<%= render 'books/userinfo', books: @books %>
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+  <span><%= link_to 'Bookers', "/", class: "navbar-brand" %></span>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto">
+          <li><%= link_to '  Home', user_path(current_user.id), class: "fas fa-home nav-link text-light" %></li>
+          <li><%= link_to '  Users', users_path, class: "fas fa-users nav-link text-light" %></li>
+          <li><%= link_to '  Books', books_path, class: "fas fa-book-open nav-link text-light" %></li>
+          <li><%= link_to '  logout', destroy_user_session_path, method: :delete, class: "fas fa-sign-out-alt nav-link text-light" %></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
 
 
+<!--共通テンプレート(userinfo)-->
+<%= render 'books/userinfo', book: @book_new, user: @user %>
 
 
 
